# HarmonyTrainer

./: .gitignore  CMakeLists.txt  build.sh  configure.sh  leaks.sh  leaks_quiet.sh  main.cpp  run.sh
include/: display.h  manager.h  notes.h
include/components/: option.h  rectangle.h  shape.h  text.h
include/display/: display.h
include/display/components/: circle.h  customTrainingItem.h  option.h  rectangle.h  shape.h  text.h
include/display/pages/: chordSelection.h  customTraining.h  customTrainingContent.h  customTrainingSetting.h  menu.h  trainingSettings.h
include/file/: fileReader.h  fileWriter.h  trainingListIO.h
include/sound/: noteGenBySteps.h  noteGenHarmonic.h  noteGenMelodic.h  noteGenerator.h  notes.h  soundControl.h
saves/: customTrainingList.txt
saves/customTrainings/: Averyverylongitemtotesttextobjectsautonewlinefeature.txt  MajorMinor3rd.txt  Perfect5thPerfect4th.txt  Thirditemplaceholder.txt
src/: display.cpp  manager.cpp  notes.cpp
src/components/: rectangle.cpp  text.cpp
src/display/: display.cpp
src/display/components/: chordSelection.cpp  circle.cpp  customTrainingItem.cpp  option.cpp  rectangle.cpp  text.cpp
src/display/pages/: customTraining.cpp  customTrainingContent.cpp  customTrainingSetting.cpp  menu.cpp
src/file/: fileReader.cpp  fileWriter.cpp  trainingListIO.cpp
src/sound/: noteGenBySteps.cpp  noteGenHarmonic.cpp  noteGenMelodic.cpp  notes.cpp  soundControl.cpp
